added annotations to all functions